# web-slicer

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  flake.nix  result.json
.cargo/: config.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
.specify/workflows/: workflow-registry.json
.zed/: settings.json
audit/: README.md  check_traceability.py  common.py  engine_api.json  extract_engine_api.py  extract_legacy_keys.py  extract_parameters.py  extract_presets_inventory.py  extract_ui_inventory.py  generate_frontend_ts.py  generate_legacy_rs.py  generate_parity_annexes.py  generate_registry_rs.py  legacy_keys.json  parameters.json  run_all.py  ui_inventory.json
backend/: Cargo.toml
backend/migrations/postgres/: 0001_init.sql  0002_model_conversion_error.sql  0003_printer_moonraker_optional.sql
backend/migrations/sqlite/: 0001_init.sql  0002_sessions.sql  0003_presets_vendor_unique.sql  0004_model_conversion_error.sql  0005_printer_moonraker_optional.sql
backend/src/: gcode.rs  lib.rs  main.rs  mesh.rs  scene.rs  server.rs  slicing.rs
backend/src/adapters/: mod.rs  sessions.rs
backend/src/adapters/files/: mod.rs
backend/src/adapters/moonraker/: mod.rs
backend/src/adapters/storage/: mod.rs
backend/src/adapters/storage/postgres/: mod.rs  repos.rs
backend/src/adapters/storage/sqlite/: mod.rs  repos.rs
backend/src/auth/: mod.rs  password.rs  secrets.rs  service.rs
backend/src/domain/: entities.rs  error.rs  id.rs  mod.rs  presets.rs  repo.rs
backend/src/engine/: mod.rs  worker.rs
backend/src/http/: error.rs  extract.rs  mod.rs  printer_relay.rs  state.rs  ws.rs
backend/src/http/dto/: mod.rs
backend/src/http/routes/: admin.rs  auth.rs  export.rs  gcodes.rs  jobs.rs  mod.rs  models.rs  presets.rs  preview.rs  printers.rs  projects.rs  scene.rs  slice.rs
backend/src/models/: convert.rs  mod.rs
backend/src/queue/: mod.rs
backend/tests/: auth_service.rs  engine_worker.rs  http_admin.rs  http_auth.rs  http_export.rs  http_gcodes.rs  http_jobs.rs  http_models.rs  http_presets.rs  http_preview.rs  http_printers.rs  http_projects.rs  http_scene.rs  http_slice.rs  http_ws.rs  isolation_campaign.rs  model_convert.rs  model_decode.rs  model_mesh.rs  moonraker_client.rs  moonraker_integration.rs  presets_seed.rs  printer_relay.rs  queue_concurrency.rs  queue_worker.rs  storage_contract_compiles.rs  storage_contract_postgres.rs  storage_contract_sqlite.rs
backend/tests/common/: mod.rs  storage_suite.rs
backend/tests/fixtures/profiles/: Demo.json
backend/tests/fixtures/profiles/Demo/filament/: Demo PLA.json
backend/tests/fixtures/profiles/Demo/machine/: Demo 0.4 nozzle.json  Demo Printer.json  fdm_common.json
backend/tests/fixtures/profiles/Demo/process/: Demo 0.2.json
backend/tests/moonraker_mock/: mod.rs
engine/: Cargo.toml  README.md  build.rs
engine/examples/: engine-cli.rs
engine/src/: lib.rs  threemf.rs
engine/src/adapters/: mod.rs
engine/src/adapters/ffi/: arrange.rs  bridge.rs  engine.rs  mesh.rs  mod.rs  model.rs  slice.rs  threemf.rs  worker.rs
engine/src/adapters/ffi/bridge/: arrange.cpp  mesh.cpp  model.cpp  model.hpp  nanosvg_impl.cpp  project.cpp  slice.cpp
engine/src/api/: config.rs  error.rs  gcode.rs  mesh.rs  mod.rs  model.rs  presets.rs  slice.rs
engine/src/gcode/: mod.rs
engine/src/params/: legacy.rs  legacy_tables.rs  mod.rs  orca_values.rs  registry.rs
engine/src/presets/: import.rs  mod.rs  resolve.rs
engine/tests/: decode.rs  ffi_smoke.rs  ffi_trait_suite.rs  gcode.rs  gcode_parity.rs  slice.rs  trait_suite_compiles.rs  worker.rs
engine/tests/common/: mod.rs  trait_suite.rs
engine/tests/fixtures/: V.stl  bridge.stl  cube20.step  cube20.stl  cube_bbl.gcode  extruder_idler.stl  frog_legs.stl  generate.py  generate_parity_corpus.py  ipadstand.stl  manifest.json  orca_project.3mf  overhang.stl  pyramid.stl  simplification.stl  two_squares.stl
engine/tests/fixtures/parity/: V__bbl-a1-draft-06.3mf  V__bbl-a1-fine-02.3mf  V__bbl-a1-standard.3mf  V__bbl-x1c-abs.3mf  V__voron-generic-pla.3mf  bridge__bbl-a1-draft-06.3mf  bridge__bbl-a1-fine-02.3mf  bridge__bbl-a1-standard.3mf  bridge__bbl-x1c-abs.3mf  bridge__voron-generic-pla.3mf  cube20__bbl-a1-draft-06.3mf  cube20__bbl-a1-fine-02.3mf  cube20__bbl-a1-standard.3mf  cube20__bbl-x1c-abs.3mf  cube20__voron-generic-pla.3mf  extruder_idler__bbl-a1-draft-06.3mf  extruder_idler__bbl-a1-fine-02.3mf  extruder_idler__bbl-a1-standard.3mf  extruder_idler__bbl-x1c-abs.3mf  extruder_idler__voron-generic-pla.3mf  frog_legs__bbl-a1-draft-06.3mf  frog_legs__bbl-a1-fine-02.3mf  frog_legs__bbl-a1-standard.3mf  frog_legs__bbl-x1c-abs.3mf  frog_legs__voron-generic-pla.3mf  ipadstand__bbl-a1-draft-06.3mf  ipadstand__bbl-a1-fine-02.3mf  ipadstand__bbl-a1-standard.3mf  ipadstand__bbl-x1c-abs.3mf  ipadstand__voron-generic-pla.3mf  overhang__bbl-a1-draft-06.3mf  overhang__bbl-a1-fine-02.3mf  overhang__bbl-a1-standard.3mf  overhang__bbl-x1c-abs.3mf  overhang__voron-generic-pla.3mf  pyramid__bbl-a1-draft-06.3mf  pyramid__bbl-a1-fine-02.3mf  pyramid__bbl-a1-standard.3mf  pyramid__bbl-x1c-abs.3mf  pyramid__voron-generic-pla.3mf  (+6 more)
frontend/: .gitignore  .prettierignore  eslint.config.js  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/messages/: en.json  fr.json
frontend/project.inlang/: settings.json
frontend/scripts/: copy-printer-covers.mjs
frontend/src/: app.html
frontend/src/lib/: guards.ts  version.test.ts  version.ts
frontend/src/lib/api/: auth.ts  jobs.ts  (+9 more)
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts  layout.css
scripts/: codegen.sh
specs/001-orcaslicer-web-parity/: data-model.md  exclusions.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  traceability-map.json  validation-sc004.md  validation-ui-parity.md
specs/001-orcaslicer-web-parity/annexes/: annexe-a-parametres.md  annexe-b-interface.md  annexe-c-presets.md
tools/dump-config/: CMakeLists.txt  main.cpp
(+207 files in other folders)
