[workspace]
resolver = "2"
members = ["backend", "engine"]
 
[workspace.package]
version = "0.1.0"
edition = "2021"
 
# Versions centralisées : les membres font `dep = { workspace = true }`
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }
ts-rs = { version = "12", features = ["serde-compat", "uuid-impl", "no-serde-warnings"] }
