[package]
name = "backend"
version.workspace = true
edition.workspace = true

[dependencies]
engine = { path = "../engine" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
ts-rs = { workspace = true }

axum = { version = "0.8", features = ["ws", "multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["fs", "cors", "trace", "compression-gzip"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sqlx = { version = "0.9", features = ["runtime-tokio", "sqlite", "postgres", "uuid", "time", "json", "migrate"] }

tower-sessions = "0.15"
argon2 = { version = "0.5", features = ["std"] }
garde = { version = "0.23", features = ["derive", "email"] }
async-trait = "0.1"

# Chiffrement au repos des clés API d'imprimante (T075, FR-060).
chacha20poly1305 = "0.10"
base64 = "0.22"

# Client Moonraker (T074, R10) : REST multipart + WebSocket JSON-RPC.
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "multipart",
    "rustls",
    "stream",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
    "connect",
    "handshake",
] }
futures-util = "0.3"
# Répertoire de travail isolé du runner de tranchage (T064).
tempfile = "3"

[features]
# Active l'adaptateur de stockage Postgres (T026). Le pilote sqlx `postgres`
# est déjà compilé ; ce drapeau conditionne le module et la suite de contrat
# (validée contre un Postgres réel via `TEST_DATABASE_URL`).
postgres = []

[dev-dependencies]
tokio = { workspace = true }
futures = "0.3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
zip = "8"
