[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }

zip = "8"
quick-xml = { version = "0.41", features = ["serialize"] }
glam = { version = "0.33", features = ["serde"] }
nix = { version = "0.31", features = ["fs"] }
tempfile = "3"
which = "8"

[dev-dependencies]
# differential testing : slice via engine vs CLI direct
assert_fs = "1"
