[package]
name = "engine"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
ts-rs = { workspace = true }

cxx = { version = "1", optional = true }

zip = "8"
quick-xml = { version = "0.41", features = ["serialize"] }
glam = { version = "0.33", features = ["serde"] }
nix = { version = "0.31", features = ["fs"] }
tempfile = "3"
which = "8"
sha1_smol = "1"

[dev-dependencies]
# differential testing : slice via engine vs CLI direct
assert_fs = "1"

[build-dependencies]
cxx-build = "1"

[features]
default = []
# Bridge cxx vers libslic3r-headless ($LIBSLIC3R_DIR). Sans cette feature,
# le crate ne link aucun C++ (le backend reste propre — R1).
ffi = ["dep:cxx"]

[[bin]]
name = "engine-worker"
path = "src/bin/engine_worker.rs"
required-features = ["ffi"]
